--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="Checkers/src"/>
+<classpath><classpathentry kind="output" path="Project 1/bin" />
 	<classpathentry kind="src" path="Project 1/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="Project 1/bin"/>
+	
 </classpath>
